决斗、轮盘 输出信息优化